abi_library&&email_notification

--- a/timelocker-backend/config.yaml
+++ b/timelocker-backend/config.yaml
@@ -23,7 +23,7 @@ jwt:
 
 # Covalent API配置
 covalent:
-  api_key: "COVALENT_API_KEY"  # 请设置你的Covalent API Key
+  api_key: "XXX"  # 请设置你的Covalent API Key
   base_url: "https://api.covalenthq.com/v1"
   request_timeout: "30s"
   cache_prefix: "asset:"
@@ -31,9 +31,9 @@ covalent:
 
 # RPC配置 - 用于监听链上事件
 rpc:
-  # RPC提供商配置
-  alchemy_api_key: "YOUR_ALCHEMY_API_KEY"
-  infura_api_key: "YOUR_INFURA_API_KEY"
+  # RPC提供商配置（用户只需要填写API key）
+  alchemy_api_key: "XXX"
+  infura_api_key: "XXX"
   
   # 当前使用的提供商（alchemy、infura 或 custom）
   # alchemy: 使用Alchemy RPC
@@ -46,4 +46,22 @@ rpc:
   block_confirmations: 12  # 区块确认数
   
   # 是否包含测试网
-  include_testnets: true 
+  include_testnets: true
+
+# 邮件服务配置
+email:
+  smtp_host: "xxx"
+  smtp_port: 587
+  smtp_username: "your_email@gmail.com"  # 发送邮件的邮箱地址
+  smtp_password: "your_app_password"     # 邮箱应用密码（不是登录密码）
+  from_name: "TimeLocker Notification"   # 发件人名称
+  from_email: "your_email@gmail.com"     # 发件人邮箱（通常与smtp_username相同）
+  
+  # 邮件通知功能配置
+  verification_code_expiry: "10m"        # 验证码过期时间
+  enable_emergency_mode: true            # 是否启用应急模式
+  emergency_resend_interval: "2h"        # 应急邮件重发间隔
+  emergency_max_attempts: 10             # 应急邮件最大发送次数
+  
+  # 邮件模板配置
+  base_url: "http://localhost:8080"      # 前端基础URL，用于生成邮件中的链接 
