add_support_chains

--- a/timelocker-backend/config.yaml
+++ b/timelocker-backend/config.yaml
@@ -65,4 +65,4 @@ email:
   emergency_max_attempts: 10             # 应急邮件最大发送次数
   
   # 邮件模板配置
-  base_url: "http://localhost:8080"      # 前端基础URL，用于生成邮件中的链接 
+  base_url: "http://16.163.43.186:8080"      # 前端基础URL，用于生成邮件中的链接 
