--- a/timelocker-backend/config.yaml
+++ b/timelocker-backend/config.yaml
@@ -44,7 +44,6 @@ rpc:
   # 监听配置
   poll_interval: "30s"  # 轮询间隔
   block_confirmations: 12  # 区块确认数
-  max_block_range: 500  # 单次RPC请求的最大区块范围（alchemy限制为500）
   
   # 是否包含测试网
   include_testnets: true
@@ -53,16 +52,30 @@ rpc:
 email:
   smtp_host: "smtp.zoho.com"
   smtp_port: 587
-  smtp_username: "zem@timelock.live"  # 发送邮件的邮箱地址
+  smtp_username: "gm@timelock.live"  # 发送邮件的邮箱地址
   smtp_password: "xxx"     # 邮箱应用密码（不是登录密码）
   from_name: "TimeLocker Notification"   # 发件人名称
-  from_email: "zem@timelock.live"     # 发件人邮箱（通常与smtp_username相同）
+  from_email: "gm@timelock.live"     # 发件人邮箱（通常与smtp_username相同）
   
   # 邮件通知功能配置
   verification_code_expiry: "10m"        # 验证码过期时间
-  enable_emergency_mode: true            # 是否启用应急模式
-  emergency_resend_interval: "2h"        # 应急邮件重发间隔
-  emergency_max_attempts: 10             # 应急邮件最大发送次数
   
   # 邮件模板配置
-  base_url: "http://16.163.43.186:8080"      # 前端基础URL，用于生成邮件中的链接 
+  email_url: "http://16.163.43.186:8080"      # 前端基础URL，用于生成邮件中的链接
+
+# 扫链系统配置（简化版，只使用Alchemy RPC）
+scanner:
+  # RPC配置（简化）
+  rpc_timeout: "20s"                  # RPC请求超时时间
+  rpc_retry_max: 5                    # RPC最大重试次数
+  rpc_retry_delay: "2s"               # RPC重试延迟（出错时等待时间）
+  
+  # 扫块配置
+  scan_batch_size: 500                # 每批扫描的区块数量
+  scan_interval: "5s"                 # 快速扫描间隔
+  scan_interval_slow: "15s"           # 慢速扫描间隔（到达最新块后）
+  scan_confirmations: 5              # 区块确认数
+
+  # Flow refresher config
+  flow_refresh_interval: "60s"        # 流刷新间隔
+  flow_refresh_batch_size: 100        # 流刷新批量大小
