--- a/env.example
+++ b/env.example
@@ -67,6 +67,13 @@ SCANNER_FLOW_REFRESH_INTERVAL=90s
 SCANNER_FLOW_REFRESH_BATCH_SIZE=100
 
 # ================================
+# 备份系统配置
+# ================================
+BACKUP_RETENTION_DAYS=30
+MAX_BACKUPS=50
+BACKUP_PREFIX=timelocker_auto
+
+# ================================
 # 域名配置 (用于Caddy)
 # ================================
 DOMAIN=test.timelock.live
