fix-restore-data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,7 +182,7 @@ services:
         crond -f -l 2
       "
     depends_on:
-      timelocker-backend:
+      postgres:
         condition: service_healthy
     networks:
       - timelocker-network
