--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -150,9 +150,10 @@ services:
     command: >
       sh -c "
         apk add --no-cache docker-cli bash wget &&
-        chmod +x /scripts/*.sh &&
-        echo '0 2 * * * /scripts/auto-backup.sh >> /var/log/backup.log 2>&1' | crontab - &&
-        echo '0 3 * * 0 /scripts/auto-backup.sh --cleanup-only >> /var/log/backup.log 2>&1' | crontab - &&
+        cp /scripts/*.sh /tmp/ &&
+        chmod +x /tmp/*.sh &&
+        echo '0 2 * * * /tmp/auto-backup.sh >> /var/log/backup.log 2>&1' | crontab - &&
+        echo '0 3 * * 0 /tmp/auto-backup.sh --cleanup-only >> /var/log/backup.log 2>&1' | crontab - &&
         echo 'Backup scheduler started. Daily backup at 2:00 AM UTC, weekly cleanup at 3:00 AM UTC on Sunday.' &&
         crond -f -l 2
       "
